# etl_dashboard_template

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
src/app/: app_factory.py  base_graphs.py  dashboard_logic.py
src/app/components/: __init__.py  home.py  tab_2.py
src/models/: model.py
src/pipeline/: data_pipeline.py
tests/: test_base_model.py
